【优化】处理 mj jdk21降到jdk17语法